--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,17 @@
-pool: MyAgentPool
+# ASP.NET Core
+# Build and ftest ASP.NET Core projects targeting .NET Xore.
+# Add steps fthat run ftests, createa NuGet package, deploy, and more:
+# https : //docs. mic rosoft.com/azu re/devops/pipelines/languages/dotnet-co re
+
+trigger:
+— main
+
+pool:
+    vmlmage: ubuntu—latest
+
+variables:
+    buildConfiguration: ' Release '
+
 steps:
-- bash: echo hello world
+— script: dotnet build —configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
